# AgentCare

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  frontdesk_agent_native.json  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: README.md
docs/api/: services.md
docs/architecture/: data-flow.md  system-map.md
docs/setup/: one-command-local.md
docs/workflows/: care-navigation.md  followup-outreach.md  frontdesk-booking.md
experiments/: README.md  exp01_extraction_quality.py  exp02_trend_detection.py  exp03_predictive_model.py  exp04_adversarial.py  requirements.txt
experiments/ml/: __init__.py  features.py  synth_corpus.py  train.py
scripts/: check_no_secrets.sh  demo_frontdesk.py  dev_up.sh  init_db.sh  public_url_checklist.sh  run_all_experiments.sh  run_analytics.sh  run_dashboard.sh  run_llm_gateway.sh  run_mock_ehr.sh  run_webhooks.sh
services/analytics/: app.py
services/dashboard/: app.py  wellness_routes.py
services/dashboard/static/: index.html
services/llm_gateway/: app.py
services/mock_ehr/: app.py
services/webhooks/: app.py
src/agentcare/: __init__.py  __main__.py  cli.py  settings.py
src/agentcare/analysis/: __init__.py  burnout.py  healthcare.py  trend.py
src/agentcare/analytics/: __init__.py  dashboard_queries.py  metrics.py  store.py
src/agentcare/bolna/: __init__.py  client.py  errors.py  models.py
src/agentcare/calendar/: __init__.py  cal_client.py
src/agentcare/connectors/: __init__.py  appointments.py
src/agentcare/core/: __init__.py  models.py
src/agentcare/customer/: __init__.py  memory.py
tests/: test_analytics_call_detail_endpoint.py  test_burnout_analysis.py  test_cli_smoke.py  test_frontdesk_usecase_ports.py  test_trend.py  test_wellness_usecase.py
(+39 files in other folders)
